<?xml version="1.0"?>
<package format="3">
  <name>scheduler</name>
  <version>0.0.1</version>
  <description>Multi-robot task scheduler with embedded optimization.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>multi_robot_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
